package keeper

import (
	"context"

	"garyeong/x/garyeong/types"

	sdk "github.com/cosmos/cosmos-sdk/types"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

func (k Keeper) GetProfilesCount(goCtx context.Context, req *types.QueryGetProfilesCountRequest) (*types.QueryGetProfilesCountResponse, error) {
	if req == nil {
		return nil, status.Error(codes.InvalidArgument, "invalid request")
	}

	ctx := sdk.UnwrapSDKContext(goCtx)

	count := k.GetProfileCount(ctx)

	return &types.QueryGetProfilesCountResponse{Count: count}, nil
}
